M5.4: options analytics and multi-leg strategies (Black-76 IV/greeks, option chain with PCR and max pain, strategy legs with ATM/offset/delta strikes, hedge-first basket execution and a multi-leg position monitor, options risk controls, PAPER-only options lifecycle, two bundled options strategies, options page, leg builder, hejje chain)
Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01CQ4eu1hAbbWxFC9fisNWee